cluster/apps/miracle/networkpolicies/ingress-nginx-miracle.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-nginx-egress-miracle
  namespace: ingress-nginx
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/component: controller
      app.kubernetes.io/instance: ingress-nginx
  egress:
    - toEndpoints:
        - matchLabels:
            app: miracle
            "k8s:io.kubernetes.pod.namespace": miracle
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
