cluster/apps/miracle/networkpolicies/miracle.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: miracle
  namespace: miracle
spec:
  endpointSelector:
    matchLabels:
      app: miracle
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: ingress-nginx
            "k8s:io.kubernetes.pod.namespace": ingress-nginx
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
